--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello GIT!</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/script.js"></script>
 </head>
 
 <body>
-
+  <h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, temporibus!
+  </h1>
 </body>
 
 </html>
